Minor fixes for syntax highlighting code - Add padding to `pre` elements - Fix Gists getting cut off

--- a/_sass/_syntax.scss
+++ b/_sass/_syntax.scss
@@ -2,6 +2,10 @@
    Syntax highlighting and formatting
    ========================================================================== */
 
+pre.highlight {
+  padding: 1em;
+}
+
 /*
    Pygments.rb and Rouge
    ========================================================================== */
@@ -114,11 +118,6 @@
 /*
    GitHub Gists
    ========================================================================== */
-
-//Set max height of embedded gist
-.gist div {
-  max-height:75em;
-}
 
 //Remove extra padding
 .gist table {
